Kure Theme/Kure.css
/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*\
| Kure                           |
| by Valerio Lyndon              |
| Version 1.0.0                  |
\*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/

/* IMPORTS */
@\import "https://fonts.googleapis.com/css?family=Muli:400,700|Playball";

/* VARIABLES */

:root {
	/* Images */
	--banner: url(https://i.imgur.com/lnTv8jR.jpg);
	--background: url(https://i.imgur.com/K9x805M.jpg);
	
	/* Colours */
	--page: 0, 80%, 6%;
	--content: 0, 10%, 12%;
	--button: 0, 50%, 7%;
	--border: 0, 40%, 30%;
	--accent: 0, 60%, 50%;
	
	--text: 0, 40%, 80%;
	--link: 0, 90%, 84%;
	--link-h: 0, 100%, 95%;
	--link-header: 0, 6%, 62%;
	--link-header-h: 0, 40%, 86%;
	--icon: 0, 35%, 72%;
	--text-shadow: 0, 53%, 57%;
	--shadow: 0, 0%, 0%;
	--tint: 21, 100%, 50%;
	--tint-gradient-1: 0, 0%, 0%;
	--tint-gradient-2: 0, 0%, 100%;
	
	/* Meta */
	--transition-text: 0.08s ease-out;
	--transition-button: 0.11s ease-out;
	--fontset: 'Muli', 'FontAwesome', sans-serif;
	--fontset-heading: 'Playball', 'FontAwesome', cursive;
}

/* REMOVALS */

/* Tutorial & MAL shutdown messages */
.initialize-tutorial,
/* Ad area found on theme 10 */
div[style="padding-top: 8px"] {
	display: none !important;
}

/* SCROLLBARS */

/* Firefox */
* {
	scrollbar-color: hsl(var(--accent)) hsl(var(--button));
}

/* Chrome */

*::-webkit-scrollbar {
	background: hsl(var(--button));
}

*::-webkit-scrollbar-button:vertical:single-button {
	background: transparent center / 10px auto no-repeat;
	height: 17px;
} *::-webkit-scrollbar-button:vertical:single-button:start {
	background-image: url(https://i.imgur.com/Cu2u9Hu.png);
} *::-webkit-scrollbar-button:vertical:single-button:end {
	background-image: url(https://i.imgur.com/0YI7VxA.png);
} *::-webkit-scrollbar-button:horizontal:single-button {
	background: transparent center / auto 10px no-repeat;
} *::-webkit-scrollbar-button:horizontal:single-button:start {
	background-image: url(https://i.imgur.com/BArw1oI.png);
} *::-webkit-scrollbar-button:horizontal:single-button:end {
	background-image: url(https://i.imgur.com/vqOtoms.png);
}

*::-webkit-scrollbar-corner {
	background: hsl(var(--button));
}

*::-webkit-scrollbar-thumb {
	background: hsl(var(--accent)) content-box;
	border: 0 solid transparent;
} *::-webkit-scrollbar-thumb:vertical {
	border-width: 0 2px;
} *::-webkit-scrollbar-thumb:horizontal {
	border-width: 2px 0;
} *::-webkit-scrollbar-thumb:hover {
	background-color: hsla(var(--accent), 75%);
}

*::-webkit-scrollbar-track {
	width: 5px;
}

/* box-sizing tweak */

:root {
	box-sizing: border-box;
} *, *::before, *::after {
	box-sizing: inherit;
}

a {
	text-decoration: none !important;
}

/* CONTAINERS */

html {
	font: 13px var(--fontset);
}

body.ownlist {
	position: relative;
	display: flex;
	min-width: 1140px;
	background: hsl(var(--tint)) no-repeat center / cover fixed !important;
	background-image:
		linear-gradient(15deg, hsl(var(--tint-gradient-1)), hsl(var(--tint-gradient-2))),
		var(--background)
		!important;
	background-blend-mode: overlay;
	flex-flow: column nowrap;
	color: hsl(var(--text)) !important;
	font: inherit;
}

body::before {
	content: '';
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	min-width: 1140px;
	height: 100%;
	background: hsl(var(--page)) var(--background) no-repeat center / cover fixed;
	opacity: 0.7;
	filter: saturate(0.5) brightness(0.5);
}

.list-container {
	width: 100%;
	background: none !important;
	border: none;
}

.list-block {
	min-height: 720px;
	margin-top: 96px !important;
}

.list-unit {
	width: 1120px;
	padding: 0 250px 0 70px;
}

.list-table {
	display: block;
	width: 100%;
	padding-top: 40px;
	border: none;
	--header-offset: -40px;
}

/* COVER */

.cover-block {
	display: block;
	width: 100%;
	height: 280px;
	background: #010101;
	overflow: hidden;
}

#cover-image-container {
	position: relative;
	display: block;
	width: 100%;
	height: 100%;
	background: hsl(var(--tint)) no-repeat center / cover;
	background-image:
		linear-gradient(15deg, hsl(var(--tint-gradient-1)), hsl(var(--tint-gradient-2))),
		var(--banner);
	background-blend-mode: overlay;
	box-shadow: inset 0 -16px 6px -12px hsla(var(--shadow), 65%);
} .cover-block #cover-image-container.hide {
	display: block !important;
}

#cover-image-container::before {
	content: '';
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background: var(--banner) no-repeat center / cover;
	opacity: 0.4;
	animation: banner-fade 1.2s ease-out 0.5s backwards;
}

@keyframes banner-fade {
	from {
		opacity: 0;
		transform: translateX(2%) scale(1.15);
	} to {
		opacity: 0.4;
		transform: none;
	}
}

#cover-image-container::after {
	content: '';
	position: absolute;
	top: 45px;
	left: 860px;
	opacity: 0.7;
}

#cover-image,
#cover-image-container .btn-list-setting {
	display: none;
}

.list-unit .list-status-title {
	position: static;
	display: block;
	width: 100%;
	height: 0;
}
/* ... */

